Update for omv 6.x and enhance hpraid for HPE smart arrays
Update for omv 6.x
Move to new HPE Storage Controller Management (ssacli)
Update 31-hwraid to better parse output
Add a new e-mail notification that check array health

Requires HPE MCP repository to be setup for Debian see:
https://downloads.linux.hpe.com/SDR/project/mcp/

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ debian/files
 debian/*.debhelper.log
 debian/*.debhelper
 debian/*substvars
+debian/debhelper-build-stamp
+
+# Smart array utils
+opt/ssautils/ssalib/__pycache__
