Move from using smartarraycheck to hpesmartarray
Move from using smartarraycheck as this conflict in the menus with
the S.M.A.R.T. tab so rename to hpesmartarray. This change fits
better with the menu set-up and operation of the plugin.

--- a/usr/share/openmediavault/workbench/navigation.d/storage.hpesmartarray.details.yaml
+++ b/usr/share/openmediavault/workbench/navigation.d/storage.hpesmartarray.details.yaml
@@ -1,8 +1,8 @@
 version: "1.0"
 type: navigation-item
 data:
-  path: "storage.smartarraycheck.details"
+  path: "storage.hpesmartarray.details"
   text: _("Array Details")
   position: 10
   icon: "mdi:database"
-  url: "/storage/smartarraycheck/details"
+  url: "/storage/hpesmartarray/details"
