--- a/usr/share/openmediavault/workbench/navigation.d/storage.hpesmartarray.settings.yaml
+++ b/usr/share/openmediavault/workbench/navigation.d/storage.hpesmartarray.settings.yaml
@@ -1,8 +1,8 @@
 version: "1.0"
 type: navigation-item
 data:
-  path: "storage.smartarraycheck.settings"
+  path: "storage.hpesmartarray.settings"
   text: _("Notification Settings")
   position: 10
   icon: "tune"
-  url: "/storage/smartarraycheck/settings"
+  url: "/storage/hpesmartarray/settings"
